Revision history for perl module UAV::Pilot

0.8 ????

- Unicast implemented for Parrot AR.Drone navdata
- WumpusRover implemented
- Decoupled interface in bin/uav and share/*.uav libaries to support more than 
  just the AR.Drone
- Decoupled SDL Joystick interface from AR.Drone
- Change ARDrone::Control::Event interface to take an existing condvar rather 
  than creating and returning a new one
- Fixed a crash where the AR.Drone's navdata was sending NaN floats

0.7 2013-10-24

- Cleanup a bunch of bad tests and dependencies from 0.6

0.6 2013-10-15

[EventHandler Interface]
- UAV::Pilot::SDL::EventHandler moved to UAV::Pilot::EventHandler
- UAV::Pilot::Events based on previous UAV::Pilot::SDL::Events, except it 
  doesn't do anything for SDL
- UAV::Pilot::SDL::Events changed to an EventHandler
- All other EventHandler objects and bin/uav* scripts updated to reflect this 
  change

[Controller and Driver Interface]
- Rename UAV::Pilot::Driver::ARDrone to UAV::Pilot::ARDrone::Driver
- Rename UAV::Pilot::Control::ARDrone to UAV::Pilot::ARDrone::Control
- All the other modules under those namespaces were renamed accordingly

[Other Changes]
- In UAV::Pilot::Control, change the 'sender' param to 'driver'
- Stack handlers passed to UAV::Pilot::Video::H264Decoder.  Note the API change 
  of 'display' to 'displays'
- Stack handlers passed to UAV::Pilot::Driver::ARDrone::Video.  Note the API 
  change of 'handler' to 'handlers'
- 'uav' shell handles dumping video to file while displaying it at the same time
- Implement 'NavCollector' to receive nav packets as they're read from the driver
- SDLNavDisplay implemented as a NavCollector rather than an EventHandler
- When we get a bad PaVE header on the video stream, fast forward to the next
  one.  This helps recover the video stream gracefully.  The video will be 
  messed up until the next keyframe, but at least it keeps going.


0.5 2013-07-31

- Real-time video implemented (this is the big one)